fun with counters

--- a/tutorial/Makefile
+++ b/tutorial/Makefile
@@ -1,4 +1,28 @@
-default: adder mult tb and counter dff and_or mux demux
+default: adder mult tb and counter dff and_or mux demux srff jkff msdff tff actr sctr bsctr gctr
+
+gctr: gctr.v gctr_tb.v jkff.v
+	iverilog -o gctr gctr.v jkff.v gctr_tb.v
+
+bsctr: bsctr.v bsctr_tb.v jkff.v
+	iverilog -o bsctr bsctr.v jkff.v bsctr_tb.v
+
+sctr: sctr.v sctr_tb.v jkff.v
+	iverilog -o sctr sctr.v jkff.v sctr_tb.v
+
+actr: actr.v actr_tb.v jkff.v
+	iverilog -o actr actr.v jkff.v actr_tb.v
+
+tff: tff.v
+	iverilog -o tff tff.v
+
+msdff: msdff.v
+	iverilog -o msdff msdff.v
+
+jkff: jkff.v jkff_tb.v
+	iverilog -o jkff jkff.v jkff_tb.v
+
+srff: srff.v
+	iverilog -o srff srff.v
 
 mux: mux.v
 	iverilog -o mux mux.v
